<resources>
    <string name="app_name">JioFiDash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_button">Refresh</string>
    <string name="data_speed_label">Data Speed</string>
    <string name="upload_label">U:</string>
    <string name="max_speed_label">Max:</string>
    <string name="download_speed_label">D:</string>
    <string name="total_data_used_label">Usage</string>
    <string name="default_time_text">00:00:00</string>
    <string name="default_data_text">0 MB</string>
    <string name="default_battery_level_text">100%</string>
    <string name="default_battery_status_text">Charging</string>
    <string name="default_lte_status_text">Connected</string>
    <string name="default_lte_band_text">40</string>
    <string name="default_lte_bandwidth_text">20 MHz</string>
    <string name="default_lte_cell_id_text">452</string>
    <string name="default_speed_text">0 Kbps</string>
    <string name="users_text_label">Users</string>
    <string name="users_default_text">0 devices</string>
    <string name="action_restart_jiofi">Restart JioFi</string>
    <string name="network_label">Network</string>
    <string name="lte_label">LTE:</string>
    <string name="lte_high_speed_text">High speed</string>
    <string name="lte_band_label">Band:</string>
    <string name="download_and_upload_speeds_label">Download and upload speeds</string>
    <string name="cell_id_label">Cell id:</string>
    <string name="data_usage_caption_text">Download and upload data usage</string>
    <string name="devices_label">Devices</string>
    <string name="connected_devices_caption_text">Connected devices</string>
    <string name="connected_devices_caption_text_singular">Connected device</string>

    <!--Shared preferences-->
    <string name="data_preference_file_key">com.chirathr.jiofidash.data_preference</string>
    <string name="saved_user_name_key">username</string>
    <string name="saved_password_key">password</string>

    <string name="login_success">login_success</string>

    <string name="saved_device_key">device_id</string>
    <string name="title_activity_on_boarding">OnBoarding</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="wps_time">wps_time</string>
    <string name="login_time">login_time</string>
    <string name="cookie_string">cookie_string</string>
    <string name="restart_dialog_message">WiFi restart required. Do you want to restart now?</string>
    <string name="restart_dialog_confirm">RESTART</string>

    <!-- JioFi restart -->
    <string name="restart_successful">Restart successful, please wait few minutes.</string>
    <string name="retry">Retry</string>
    <string name="ssid_name_label">SSID Name</string>
    <string name="wifi_label">WiFi</string>
    <string name="jiofi_ssid_name_default">JioFi SSID name</string>
    <string name="wifi_caption_text">Change WiFi settings</string>
    <string name="ssid_and_password_button">SSID/Password</string>
    <string name="devices_connected_text">Devices connected to WiFi</string>
    <string name="connected_text">Connected</string>
    <string name="ip_default_text">192.168.15.8</string>
    <string name="default_mac_text">c4:8e:8f:01:5e:f5</string>
    <string name="device_count_text">0</string>
    <string name="default_device_text">chirath-HP-Pavilion-Notebook</string>
    <string name="change_ssid_pass_caption_text">Change SSID and password</string>
    <string name="password_text">Password</string>
    <string name="ssid_text">SSID</string>


    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="password_hidden">***********</string>
    <string name="error_too_many_attempts">Saving failed, try again.</string>
    <string name="select_your_jiofi">Select your JioFi</string>
    <string name="change_button_text">CHANGE</string>
    <string name="restart_text">Restart</string>
    <string name="wifi_settings_text">WiFi Settings</string>
    <string name="push_wps_button_text">Push WPS button</string>
    <string name="admin_web_ui_text">Admin Web Ui</string>
    <string name="about_text">About</string>
    <string name="jiofi_6_text">JioFi 6</string>
    <string name="jiofi_6_desc_text">JioFi 6(JMR815) 4G device with 3000mah battery, WiFi and micro SD.</string>
    <string name="select_button_text">SELECT</string>
    <string name="login_text">Login</string>
    <string name="login_desc_text">Login to continue</string>
    <string name="username_text">Username</string>
    <string name="other_jiofi_text">Other JioFi</string>
    <string name="other_jiofi_desc_text">Sorry! We do not support older devices yet. Please use the Web UI instead.</string>
    <string name="web_ui_button_text">WEB UI</string>
    <string name="login_error">Username or password wrong</string>
    <string name="login_error_blank">Cannot be blank</string>
    <string name="change_saved_username_and_password">Edit login credentials</string>
    <string name="add_login_details">"Add login details"</string>
    <string name="change_selected_device">Change selected device</string>

    <string name="battery_notification_channel_name">Low battery</string>
    <string name="battery_low_notification_title_format_string">JioFi Battery low: %d%%</string>
    <string name="battery_full_notification_title_format_string">JioFi Battery Full: %d%%</string>
    <string name="battery_low_critical_notification_title_format_string">JioFi Battery critically low: %d%%</string>
    <string name="battery_low_notification_body_format_string">Please connect your charger.</string>
    <string name="battery_full_notification_body_format_string">You can remove your charger now.</string>
    <string name="battery_low_critical_notification_body_format_string">JioFi will turn off in few minutes.</string>
    <string name="battery_notification_percent">battery_notification_percent</string>
    <string name="designed_by_chirath_r">Designed by Chirath R</string>
    <string name="chirathr_website">https://chirathr.com</string>
    <string name="app_description_about">This app provide a simple and easy to use interface to manage a JioFi device.</string>
    <string name="email_id_chirath">chirath.02@gmail.com</string>
    <string name="please_contact_email">I am always excited to hear from you! If you have any feedback, questions, or concerns, please email me at:</string>
    <string name="follow_me_on_twitter">Follow me on twitter:</string>
    <string name="twitter_chirath">https://twitter.com/chirathr</string>

    <string name="error_selecting_device_dialog_message">You have selected the wrong device, please try again.</string>
    <string name="select_another">SELECT ANOTHER</string>
    <string name="reset_password">Login issues?</string>
    <string name="reset_password_url">https://blog.chirathr.com/jiofi/2018/11/25/how-to-reset-jiofi-6/</string>
</resources>
