<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_padding"
    android:layout_marginTop="@dimen/card_padding"
    android:layout_marginBottom="@dimen/card_padding"
    android:background="@color/colorBackgroundCard"
    app:cardBackgroundColor="@color/colorBackgroundCard"
    app:cardCornerRadius="3dp"
    app:cardElevation="@dimen/card_elevation">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lte_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/wifi_icon"
                android:layout_width="@dimen/card_header_icon"
                android:layout_height="@dimen/card_header_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_signal_cellular_3_bar_24px" />

            <TextView
                android:id="@+id/tv_data_usage_label"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/network_label"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/wifi_icon"
                app:layout_constraintTop_toTopOf="@+id/wifi_icon" />

            <TextView
                android:id="@+id/tv_lte_speed_text"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lte_high_speed_text"
                android:textColor="@color/colorGreyDark"
                app:layout_constraintStart_toStartOf="@+id/tv_data_usage_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_usage_label" />


            <TextView
                android:id="@+id/tv_lte_band"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/default_lte_band_text"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@+id/tv_lte_band_label"
                app:layout_constraintStart_toEndOf="@+id/tv_lte_band_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_lte_band_label" />

            <TextView
                android:id="@+id/tv_lte_band_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/lte_band_label"
                android:textColor="@color/colorGreyDark"
                app:layout_constraintStart_toStartOf="@+id/wifi_icon"
                app:layout_constraintTop_toBottomOf="@+id/wifi_icon" />

            <TextView
                android:id="@+id/tv_lte_bandwidth"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/default_lte_bandwidth_text"
                android:textColor="@color/colorGreyDark"
                app:layout_constraintBottom_toTopOf="@+id/tv_lte_band"
                app:layout_constraintStart_toEndOf="@+id/tv_lte_band"
                app:layout_constraintTop_toBottomOf="@+id/tv_lte_band" />

            <TextView
                android:id="@+id/tv_lte_cell_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cell_id_label"
                app:layout_constraintStart_toStartOf="@+id/tv_lte_band_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_lte_band_label"
                android:textColor="@color/colorGreyDark"/>

            <TextView
                android:id="@+id/tv_lte_cell_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_lte_cell_id_text"
                app:layout_constraintBottom_toTopOf="@+id/tv_lte_cell_id_label"
                app:layout_constraintStart_toStartOf="@+id/tv_lte_band"
                app:layout_constraintTop_toBottomOf="@+id/tv_lte_cell_id_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/lte_info_loading_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>
    </FrameLayout>

</com.google.android.material.card.MaterialCardView>