<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/colorBackgroundCard"
    app:cardBackgroundColor="@color/colorBackgroundCard"
    app:cardCornerRadius="3dp"
    app:cardElevation="@dimen/card_elevation">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wifi_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/wifi_icon"
                android:layout_width="@dimen/card_header_icon"
                android:layout_height="@dimen/card_header_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_wifi_orange_24px" />

            <TextView
                android:id="@+id/tv_devices_label"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/wifi_label"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/wifi_icon"
                app:layout_constraintTop_toTopOf="@+id/wifi_icon" />

            <TextView
                android:id="@+id/tv_devices_count"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/users_default_text"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/tv_devices_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_devices_label" />

            <TextView
                android:id="@+id/tv_wifi_ssid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ssid_name_label"
                app:layout_constraintEnd_toEndOf="@+id/tv_wifi_ssid"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/colorGreyDark"/>

            <TextView
                android:id="@+id/tv_wifi_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/jiofi_ssid_name_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_wifi_ssid_label"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/colorWhite"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/wifi_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>

    </FrameLayout>

</com.google.android.material.card.MaterialCardView>